# solitaire

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: launch.json
.claude/agents/: implementer.md  reviewer.md
.github/workflows/: ci.yml  deploy-demo.yml
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: main.ts
docs/: winnable-seeds.md
solitaire-core/: Cargo.toml
solitaire-core/src/: branding.rs  consts.rs  lib.rs  platform.rs  settings.rs
solitaire-core/src/cards/: card.rs  deck.rs  mod.rs  rank.rs  suit.rs  tests.rs
solitaire-core/src/games/: SPEC_SPIDER_SOLVER.md  classic.rs  deal_stability_tests.rs  freecell.rs  freecell_tests.rs  hint.rs  klondike.rs  klondike_hint.rs  klondike_solver.rs  klondike_tests.rs  mod.rs  moms.rs  ms_freecell.rs  seed_generator.rs  spider.rs  spider_layout_tests.rs  spider_reverse_gen.rs  spider_solver.rs  spider_tests.rs  winnable_seeds.rs
solitaire-core/src/piles/: hit.rs  layout.rs  mod.rs  pile.rs  set.rs  tests.rs
solitaire-core/src/render/: atlas.rs  card_back.rs  card_face.rs  mod.rs  pile_paint.rs  svg_deck.rs
solitaire-core/src/session/: mod.rs  moves.rs  tests.rs  undo.rs
solitaire-core/src/ui/: animation.rs  app_model.rs  app_root.rs  confirm_dialog.rs  dyn_session.rs  fullscreen_button.rs  game_widget.rs  help_content.rs  help_widget.rs  hud_widget.rs  icons.rs  layout.rs  menu_widget.rs  mod.rs  overlay_stack.rs  placeholder_widget.rs  play_deal_dialog.rs  seed_gen_window.rs  title_widget.rs  toast.rs
solitaire-core/src/ui/app_model/: hints.rs  tests.rs
solitaire-core/src/ui/game_widget/: animations.rs  banners.rs  celebrate.rs  drag.rs  hints.rs  pile_click.rs
solitaire-core/tests/: file_line_count.rs
solitaire-native/: Cargo.toml
solitaire-native/src/: main.rs
solitaire-wasm/: Cargo.toml
solitaire-wasm/src/: lib.rs
